objects/copado__Team_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>copado__Deliverable__c</fullName>
        <inlineHelpText>Short description (255 chars max) of the User Story that is needed from the other team. More detailed description can be added to the Notes field.</inlineHelpText>
        <label>Deliverable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Dependency_Status__c</fullName>
        <label>Dependency Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>More Info Needed</fullName>
                </value>
                <value>
                    <fullName>Prioritized</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Dependent_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Team that is dependent on another team to provide the User Story.</description>
        <inlineHelpText>The Team that is dependent on another team to provide the User Story.</inlineHelpText>
        <label>Dependent Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>Team Dependencies needed for this Team</relationshipLabel>
        <relationshipName>Team_Dependencies_For_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Dependent_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User Story that is dependent on the completion of the specified deliverable.</description>
        <inlineHelpText>The User Story that is dependent on the completion of the specified deliverable.</inlineHelpText>
        <label>Dependent User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Team Dependencies needed for this User Story</relationshipLabel>
        <relationshipName>Team_Dependencies_For_UStory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Needed_by_Date__c</fullName>
        <label>Needed by (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Provider_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team that will provide the deliverable to fulfill this dependency.</description>
        <inlineHelpText>The team that will provide the deliverable to fulfill this dependency.</inlineHelpText>
        <label>Provider Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>Team Dependencies on this Team</relationshipLabel>
        <relationshipName>Team_Dependencies_On_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Provider_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The record representing the User Story to satisfy the deliverable of this dependency.</description>
        <inlineHelpText>The record representing the User Story to satisfy the deliverable of this dependency.</inlineHelpText>
        <label>Provider User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Team Dependencies on this User Story</relationshipLabel>
        <relationshipName>Team_Dependencies_On_UStory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Team Dependencies</relationshipLabel>
        <relationshipName>Team_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Skip_Dependency__c</fullName>
        <formula>OR( ISPICKVAL( copado__Dependency_Status__c ,&apos;Completed&apos;), ISPICKVAL( copado__Dependency_Status__c ,&apos;Deferred&apos;), ISPICKVAL( copado__Dependency_Status__c ,&apos;Never&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skip Dependency</label>
        <type>Checkbox</type>
    </fields>
    <label>Team Dependency</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Deliverable__c</columns>
        <columns>copado__Dependency_Status__c</columns>
        <columns>copado__Needed_by_Date__c</columns>
        <columns>copado__Dependent_Team__c</columns>
        <columns>copado__Provider_Team__c</columns>
        <columns>copado__Dependent_User_Story__c</columns>
        <columns>copado__Provider_User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TD-{0000000}</displayFormat>
        <label>Team Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>